@@ -53,9 +53,7 @@ corresponding Unix manual entries for more information on calls.");
 #include <sys/wait.h>		/* For WNOHANG */
 #endif
 
-#ifdef HAVE_SIGNAL_H
 #include <signal.h>
-#endif
 
 #ifdef HAVE_FCNTL_H
 #include <fcntl.h>
