@@ -227,9 +227,6 @@ typedef long intptr_t;
 /* Define if you have the sigaction function. */
 #define HAVE_SIGACTION 1
 
-/* Define if you have the strdup function. */
-#define HAVE_STRDUP 1
-
 /* Define if you have the strerror function. */
 #define HAVE_STRERROR 1
 
@@ -263,26 +260,8 @@ typedef long intptr_t;
 /* Define if you have the <fcntl.h> header file. */
 #define HAVE_FCNTL_H 1
 
-/* Define if you have the <limits.h> header file. */
-#define HAVE_LIMITS_H 1
-
-/* Define if you have the <locale.h> header file. */
-#define HAVE_LOCALE_H 1
-
 /* Define if you have the <ncurses.h> header file. */
 #define HAVE_NCURSES_H 1
-
-/* Define if you have the <signal.h> header file. */
-#define HAVE_SIGNAL_H 1
-
-/* Define if you have the <stdarg.h> header file. */
-#define HAVE_STDARG_H 1
-
-/* Define if you have the <stddef.h> header file. */
-#define HAVE_STDDEF_H 1
-
-/* Define if you have the <stdlib.h> header file. */
-#define HAVE_STDLIB_H 1
 
 /* Define if you have the <sys/file.h> header file. */
 #define HAVE_SYS_FILE_H 1
