@@ -911,9 +911,9 @@ dnl AC_MSG_RESULT($cpp_type)
 
 # checks for header files
 AC_HEADER_STDC
-AC_CHECK_HEADERS(dlfcn.h fcntl.h grp.h limits.h langinfo.h \
-libintl.h locale.h ncurses.h poll.h pthread.h \
-signal.h stdarg.h stddef.h stdlib.h stropts.h termios.h thread.h \
+AC_CHECK_HEADERS(dlfcn.h fcntl.h grp.h langinfo.h \
+libintl.h ncurses.h poll.h pthread.h \
+stropts.h termios.h thread.h \
 unistd.h utime.h \
 sys/audioio.h sys/bsdtty.h sys/file.h sys/lock.h sys/mkdev.h sys/modem.h \
 sys/param.h sys/poll.h sys/select.h sys/socket.h sys/time.h sys/times.h \
